# SonicSync

./: .gitignore  README.md  graphql-codegen.yml  package.json  pnpm-lock.yaml  scaffold.sql  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1671242460834.mjs  vite.config.ts.timestamp-1675559924815.mjs
.github/workflows/: Artifacts.yml  Release.yml  cloud-AutoDeployTrigger-b624a240-492e-4b7c-ae04-a51050610c85.yml  main.yml  remove-react.yml
cloud/: .dockerignore  .gitignore  Dockerfile  README.md
cloud/workspace/: go.mod  go.sum
cloud/workspace/cmd/: server.go
cloud/workspace/crypt/: hash.go  token.go
cloud/workspace/database/: mongo.go  postgres.go
cloud/workspace/database/migrations/: 1_users.up.sql
cloud/workspace/database/models/: user.go
cloud/workspace/database/resources/: pg_schema.sql
cloud/workspace/graph/: generated.go  schema.resolvers.go
cloud/workspace/graph/model/: utils.go
cloud/workspace/graph/schemas/: schema.graphqls
cloud/workspace/handlers/: graphql.go  routes.go
cloud/workspace/internal/: setup.go
cloud/workspace/middleware/: context.go  jwt.go
cloud/workspace/routes/: auth.go  queries.go
desktop/: houdini.config.js  package.json  pnpm-lock.yaml  schema.graphql  tailwind.config.cjs  template.sql  vite.config.ts  vite.config.ts.timestamp-1667940209082.mjs
desktop/src/: App.svelte  app.html  client.ts  hooks.server.ts  theme.postcss
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/sqlite_database/: Cargo.toml
desktop/src-tauri/sqlite_database/src/sql/entities/: mod.rs
desktop/src-tauri/sqlite_database/src/sql/queries/: deletions.rs  search.rs
desktop/src-tauri/src/: main.rs
desktop/src-tauri/src/database/: commands.rs  mod.rs  models.rs  runtime.rs  search_engine.rs
desktop/src-tauri/src/essentials/: menu.rs
desktop/src-tauri/src/menus/: bar.rs  events.rs  mod.rs
desktop/src/apollo/: apolloClient.ts
desktop/src/components/: EquipmentComponent.svelte  EquipmentHeader.svelte  Header.svelte  Login.svelte
desktop/src/components/Preferences/: AccountPref.svelte
desktop/src/graphql/: EquipmentModelSearch.graphql  FuzzySearchModel.graphql  GetEquipment.graphql  UpdateEquipment.graphql
desktop/src/graphql/Creation/: CreateMicrophoneItem.graphql
desktop/src/graphql/Fragments/: DimensionFrag.graphql  MicrophoneFrag.graphql
desktop/src/lib/@types/: equipment.ts  graphql.ts  project.ts  user.ts
desktop/src/lib/components/: ContextLayer.svelte
desktop/src/lib/stores/: equipment.ts  project.ts  user.ts
desktop/src/pages/: Bye.svelte  EquipmentLibraryPage.svelte  EquipmentListPage.svelte  ProductionPage.svelte
desktop/src/routes/: +layout.svelte  +page.gql  +page.svelte
desktop/src/routes/cable-list/: +page.svelte  Cable.svelte
desktop/src/routes/equipment-library/: +page.svelte  (+1 more)
desktop/src/utils/: ClientContants.ts  codgen-init.js  styles.ts
src/: .prettierrc  App.svelte  Classes.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  sqlite:internal.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: internal-schema.sql
src-tauri/sqlite_database/: Cargo.toml
src-tauri/sqlite_database/src/: lib.rs  test-multiple-items.json
src-tauri/sqlite_database/src/sql/: database_setup.rs  entities.rs  error_handling.rs
src-tauri/sqlite_database/src/sql/entities/: creation_structs.rs  enums.rs  field_structs.rs  structs.rs
src-tauri/sqlite_database/src/sql/queries/: deletions.rs  insertions.rs  search.rs
src-tauri/sqlite_database/src/tests/: mod.rs  test_insertions.rs
src-tauri/sqlite_database/tests/: test_db_setup.rs
src-tauri/src/: main.rs
src-tauri/src/essentials/: communication.rs  menu.rs  mod.rs  resolver_utils.rs
src-tauri/src/features/: communication.rs  menu.rs  mod.rs
src-tauri/src/menus/: menu.rs
src-tauri/src/sql/: database_setup.rs  mod.rs
src/apollo/: apolloClient.ts  apolloLinks.ts
src/components/: ContextLayer.svelte  EquipmentComponent.svelte  Footer.svelte  Header.svelte  Login.svelte  PhotoDrop.svelte  Routes.svelte
src/components/Preferences/: GeneralPref.svelte
src/database/: Sqlite.ts
src/database/entities/: ConsoleItem.ts  Item.ts  ProcessingItem.ts  RFBand.ts  SQLController.ts
src/graphql/: AllItems.graphql  CreateEquipment.graphql  EquipmentModelSearch.graphql  FindAllItems.graphql  FuzzySearchModel.graphql  GetEquipment.graphql  GlobalItemSearch.graphql  Login.graphql  UpdateEquipment.graphql  me.graphql  schema.graphql
src/graphql/Creation/: CreateAmplifierItem.graphql  CreateComputerItem.graphql  CreateConsoleItem.graphql  CreateMonitoringItem.graphql  CreateProcessingItem.graphql
src/graphql/Fragments/: AmpFrag.graphql  ComputerFrag.graphql  ConsoleFragment.graphql  GenericFragment.graphql  MonitoringFrag.graphql  NetworkConnectionFragment.graphql  NetworkFragment.graphql  NetworkItemFrag.graphql  PhysicalPortFrag.graphql  PowerFragment.graphql  ProcessorFragment.graphql  RadioFrag.graphql  SpeakerFrag.graphql
src/lib/: Greet.svelte
src/pages/: DatabaseView.svelte  EquipmentLibraryPage.svelte  EquipmentListPage.svelte  MainMenu.svelte  PreferencesPage.svelte  ProductionPage.svelte  Sheets.svelte  Sheets.utils.jsx  Sheets.utils.ts
src/pages/Sheets/: Sheets.svelte  Sheets.utils.ts
src/stores/: PrefsStore.ts  ProjectStore.ts  Store.ts  renderStore.ts
src/test/: SQLite.test.ts
src/utils/: ClientContants.ts  styles.ts
web/: package.json  pnpm-lock.yaml
workspace/: go.mod  go.sum
workspace/crypt/: token.go
workspace/database/: mongo.go
workspace/database/models/: user.go
workspace/graph/: generated.go  schema.resolvers.go
workspace/graph/model/: interfaces.go  models_gen.go  utils.go
workspace/graph/schemas/: category_details.graphqls  enums.graphqls  schema.graphqls  sub_fields.graphqls
workspace/middleware/: cors.go  jwt.go
workspace/routes/: auth.go  graphql.go
(+19 files in other folders)
