[package]
name = "Deadalus-Tauri"
version = "0.0.1"
description = "Sound Design Production Tool"
authors = ["Michael Aboah"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-all", "fs-all", "http-all", "path-all"] }
tokio = { version = "1", features = ["full"] }
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "json", "sqlite"] }
# sqlite = "0.3"

tauri-plugin-store = { git = "https://github.com/tauri-apps/tauri-plugin-store"}
tauri-plugin-persisted-scope = "0.1.0"
tauri-plugin-window-state = "0.1"
# tauri-plugin-sqlite = { git = "https://github.com/lzdyes/tauri-plugin-sqlite", tag = "v0.1.1"}
# [dependencies.tauri-plugin-store]
# git = "https://github.com/tauri-apps/tauri-plugin-store"
# tag = "v0.1.0"
#branch = "main"
sqlite_database = { path = "sqlite_database" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
