[package]
name = "Deadalus-Tauri"
version = "0.0.1-alpha"
description = "Sound Design Production Tool"
authors = ["Michael Aboah"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
dotenvy = "0.15.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-all", "fs-all", "http-all", "path-all", "window-print"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/tauri-plugin-store"}
tauri-plugin-persisted-scope = "0.1.0"
tauri-plugin-window-state = "0.1"
sqlite_database = { path = "sqlite_database" }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.17"

[dev-dependencies]
dotenvy = "0.15.6"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
