[package]
name = "sqlite_database"
version = "0.0.1"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "json", "sqlite"] }
serde = {version = "1.0.180", features = ["derive"]}
serde_json = "1.0.104"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
tauri = { version = "1.4.1", features = ["dialog"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"]}

[dev-dependencies]
mockall = "0.11.4"
dotenvy = "0.15.7"
